--- a/index.html
+++ b/index.html
@@ -126,12 +126,12 @@
 
   // ====== REPLACE with your Firebase config ======
   const firebaseConfig = {
-    apiKey: "YOUR_API_KEY",
-    authDomain: "YOUR_AUTHDOMAIN",
-    projectId: "YOUR_PROJECT_ID",
-    storageBucket: "YOUR_STORAGE_BUCKET",
-    messagingSenderId: "YOUR_MSG_SENDER",
-    appId: "YOUR_APP_ID"
+    apiKey: "AIzaSyCt0mvu4CbRQBdBJL5wAxijAdEirBUDCDc",
+    authDomain: "justice-for-jmi.firebaseapp.com",
+    projectId: "justice-for-jmi",
+    storageBucket: "justice-for-jmi.firebasestorage.app",
+    messagingSenderId: "17849710989",
+    appId: "1:17849710989:web:0b1dd3c9bb77520d98a5c4"
   };
   // =================================================
 
