--- a/index.html
+++ b/index.html
@@ -227,6 +227,11 @@
     transition: transform .12s, box-shadow .12s; 
     min-width:170px; }
 
+    .privacy {
+      color: rgb(173, 173, 173);
+      font-size: 10px;
+    }
+
   .send-btn[disabled]{ opacity:0.7; cursor:default; box-shadow:none; transform:none; }
   .send-btn.spinner-mode{ width:48px; border-radius:50%; padding:12px; justify-content:center; }
   .btn-spinner{ width:18px; height:18px; border-radius:50%; border:3px solid rgba(255,255,255,0.22); border-top-color:#fff; animation:spin .7s linear infinite; display:none; }
